syntax = "proto3";

option go_package = "gitee.com/openeuler/kunpengsecl/attestation/ras/clientapi";

service Ras {
  rpc CreateIKCert (CreateIKCertRequest) returns (CreateIKCertReply) {}
  rpc RegisterClient (RegisterClientRequest) returns (RegisterClientReply) {}
  rpc UnregisterClient (UnregisterClientRequest) returns (UnregisterClientReply) {}
  rpc SendHeartbeat (SendHeartbeatRequest) returns (SendHeartbeatReply) {}
  rpc SendReport (SendReportRequest) returns (SendReportReply) {}
}

message CreateIKCertRequest {
  KeyPub ekPub = 1;
  KeyPub ikPub = 2;
  KeyName ikName = 3;
}

message KeyPub {
  bytes key = 1;
}

message KeyName {
  string name = 1;
}

message CreateIKCertReply {
  CertEncrypted icEncrypted = 1;
  Challenge challenge = 2;
}

message CertEncrypted {
  bytes cert = 1;
}

message Challenge {
  string challenge = 1;
}

message RegisterClientRequest {
  Cert ic = 1;
  ClientInfo clientInfo = 2;
}

message Cert {
  bytes cert = 1;
}

message ClientInfo {
  map<string, string> clientInfo = 1;
}

message RegisterClientReply {
  int64 clientId = 1;
  ClientConfig clientConfig = 2;
}

message ClientConfig {
  int64 hbDurationSeconds = 1;
  int64 trustDurationSeconds = 2;
}

message UnregisterClientRequest {
  int64 clientId = 1;
}

message UnregisterClientReply {
  bool result = 1;
}

message SendHeartbeatRequest {
  int64 clientId = 1;
}

message SendHeartbeatReply {
  int64 nextAction = 1;
  ActionParameters actionParameters = 2;
  uint64 nonce = 3;
}

message ActionParameters {
}

message SendReportRequest {
  int64 clientId = 1;
  TrustReport trustReport = 2;
}

message TrustReport {
  PcrInfo pcrInfo = 1;
  repeated Manifest manifest = 2;
  int64 clientId = 3;
  ClientInfo clientInfo = 4;
  string algorithm = 5;
}

message PcrInfo{
  PcrSelection pcrSelection = 1;
  map<int64, string> pcrValues = 2;
  bytes pcrQuote = 3;
}

message PcrSelection{
  repeated int32 pcrs = 1;
}

message Manifest{
  string pcr = 1;
  string template_hash = 2;
  string format = 3;
  string filedata_hash = 4;
  string filename_hint = 5;
}

message SendReportReply {
  bool result = 1;
}

